fix modal and image cropping

--- a/src/App.scss
+++ b/src/App.scss
@@ -27,6 +27,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    padding: 0;
 }
 
 .form__content {
@@ -72,8 +73,9 @@
 }
 
 .image-input__image-cropped {
-    height: 250px;
     object-fit: contain;
+    width: 100%;
+    max-height: 300px !important;
 }
 
 .card__container {
@@ -81,4 +83,10 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
+}
+
+.card__form {
+    max-height: 500px;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
