--- a/src/index.scss
+++ b/src/index.scss
@@ -35,3 +35,20 @@ body {
     justify-self: center;
     top: 40px
 }
+
+
+/******************************************/
+/*              Scrollbar                 */
+/******************************************/
+::-webkit-scrollbar {
+  width: 6px;
+  height: 6px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: white;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #a76efd;
+}
